--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   position: relative;
   top: 20rem;
-  border-radius: 3px;
+  border-radius: 1rem;
   padding: $l-size $m-size;
   text-align: center;
   width: 60rem;
